add new area for content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <canvas id="scene"></canvas>
+    <h2>World in Hand Navigation</h2>
+    <p>Some further info. Lorem Ipsum.</p>
     <script type="module" src="/src/scene.ts"></script>
   </body>
 </html>
