--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <canvas id="scene"></canvas>
-    <h1>World-In-Hand Navigation</h1>
-    <h4>An exploration into extending the Three.js Framework</h4>
+    <div id="content">
+    <h1 id="headline">World-In-Hand Navigation</h1>
+    <h4 id="subtitle"><i>An exploration into extending the Three.js Framework</i></h4>
+    <br>
     <h3>About the project</h3>
     <p>Three.js is a popular JavaScript library used for 3D graphics and visualizations on the web.  
       As part of the seminar "Extending the Three.js Framework," hosted by the Department of Computer Graphics Systems at Hasso-Plattner-Institute, 
@@ -107,6 +109,7 @@
     </p>
 
     <h2>Attribution</h2>
+    </div>
 
     <script type="module" src="/src/scene.ts"></script>
   </body>
