--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/threejs-icon.svg" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Three.js + TypeScript + Vite</title>
   </head>
   <body>
     <canvas id="scene"></canvas>
+    <a href="#content" class="read-more-btn">
+      <span>Read more</span>
+      <span class="material-symbols-outlined">
+        arrow_downward
+      </span>
+    </a>
     <div id="content">
     <h1 id="headline">World-In-Hand Navigation</h1>
     <h4 id="subtitle"><i>An exploration into extending the Three.js Framework</i></h4>
