add second button

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
   </head>
   <body>
     <canvas id="scene"></canvas>
-    <a href="#content" class="read-more-btn">
+    <a href="#content" class="read-more-btn btn">
       <span>Read more</span>
       <span class="material-symbols-outlined">
         arrow_downward
+      </span>
+    </a>
+    <a href="#scene" class="demo-btn btn">
+      <span>Demo</span>
+      <span class="material-symbols-outlined">
+        arrow_upward
       </span>
     </a>
     <div id="content">
