add loading screen

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 <body>
   <canvas id="scene"></canvas>
+  <div id="loading-overlay">
+    <p>Loading scene...</p>
+</div>
   <div id="info-buttons">
     <div id="rotate-info" class="info-btn btn">
       <span>Rotate</span>
