add kinda looping videos

--- a/index.html
+++ b/index.html
@@ -90,7 +90,33 @@
       into any Three.js project.
       Impartial to the scene, they respond to user input and adjust the camera accordingly.
       Like most navigation techniques, OrbitControls offer three primary modes of interaction:
-      translation, rotation, and zoom (techninally a dolly) <sup>[<a href="#ref1">1</a>, <a href="#ref2">2</a>]</sup>.
+      rotation, zoom (techninally a dolly), and translation (panning), <sup>[<a href="#ref1">1</a>, <a href="#ref2">2</a>]</sup>.
+    </p>
+    <div id="video-container">
+      <div class="video-item">
+          <h4>Rotation</h4>
+          <video autoplay loop muted playsinline width="320" height="180" id="rotaionVideo">
+              <source src="/vids/rotate.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+      </div>
+      <div class="video-item">
+          <h4>Zoom</h4>
+          <video autoplay loop muted playsinline width="320" height="180" id="zoomVideo">
+              <source src="/vids/zoom3.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+      </div>
+      <div class="video-item">
+          <h4>Panning</h4>
+          <video autoplay loop muted playsinline width="320" height="180" id="panningVideo">
+              <source src="/vids/pan2.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+      </div>
+  </div>
+  
+    <p>
       However, these operations are focused on one predefined target point in the scene, limiting the flexibility to
       interact with the scene as a whole.
     </p>
