Add youtube embed and bump dep

--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@ function render() {
       information on how to use our navigation under both links.
     </p>
 
+    <h2>Demo</h2>
+    <iframe width="66%" style="aspect-ratio: 16 / 9; display: block; margin: auto" src="https://youtube.com/embed/Z4n992rItDw" allowfullscreen></iframe>
+
     <h2>Summary & Future Work</h2>
     <p>
       In summary, our World-In-Hand navigation approach offers a more intuitive and immersive way to navigate virtual
